k8s/ingress/ingress-staging.yaml
# #----this one is working fine without certificate-------start-------
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: your-ingress
#   namespace: ingress-basic
#   annotations:
#     nginx.ingress.kubernetes.io/ingress-class: nginx
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     # nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: 'mcartapis.eastus.cloudapp.azure.com'
#     http:
#       paths:
#       - path: /authmanagement
#         pathType: Prefix
#         backend:
#           service:
#             name: auth-service
#             port:
#               number: 80
#       - path: /products
#         pathType: Prefix
#         backend:
#           service:
#             name: product-service
#             port:
#               number: 80
# #----this one is working fine without certificate-------end-------
# -----------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: your-ingress
  namespace: ingress-basic
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ingress-class: "nginx"
spec:
  tls:
    - hosts:
        - mcartapis.eastus.cloudapp.azure.com
      secretName: tls-secret-stg
  ingressClassName: nginx
  rules:
  - host: mcartapis.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /authmanagement
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: product-service
            port:
              number: 80
# -----------------------------------------------------
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: your-ingress
#   namespace: ingress-basic
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-staging
#     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
#     nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:4200/,https://mcartapp.azurewebsites.net/"
#     nginx.ingress.kubernetes.io/enable-cors: "true"
#     nginx.ingress.kubernetes.io/ingress-class: "nginx"
# spec:
#   tls:
#     - hosts:
#         - mcartapis.eastus.cloudapp.azure.com
#       secretName: tls-secret-stg
#   ingressClassName: nginx
#   rules:
#   - host: mcartapis.eastus.cloudapp.azure.com
#     http:
#       paths:
#       - path: /authmanagement
#         pathType: Prefix
#         backend:
#           service:
#             name: auth-service
#             port:
#               number: 80
#           servicePort: 80
#       - path: /products
#         pathType: Prefix
#         backend:
#           service:
#             name: product-service
#             port:
#               number: 80
#           servicePort: 80
